--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   },
   "homepage": "https://github.com/sanket622/namaste-react#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.4",
     "parcel": "^2.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
